    configuration file.
  * Remove obsoleted sentence from the README file.
  * Update Keyboard/ckb directory.
  * Rearrange the code in config.proto to make easier to specify
    selectively the priority of the layout question depending on the
    source of the default value.
  * Simply execute the config script in udebs postinst, do not source.
    Thanks to Christian Perrier, closes: #439633.

  [ Debconf translations ]
  * Spanish. Closes: #529031

  [ Christian Perrier ]
  * Change debian-installer/console-setup/title to
    debian-installer/console-setup-udeb/title so that
    menu item localization works

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 15 May 2009 21:41:13 +0300

console-setup (1.35) unstable; urgency=low

  [ Colin Watson ]
  * Merge from Ubuntu:
    - Treat the Kazakh layout (kz) as non-Latin (LP: #356816).
    - Set default layout for Morocco to 'ma'.
  * Handle temporary output files better in kbdcompiler (closes: #524556).

  [ Samuel Thibault ]
  * Fetch keyboard names translations from xkeyboard-config.
  
  [ Anton Zinoviev ]
  * Escape commas in Debconf questions.  Thanks to Raphaël Hertzog,
    closes: #528033.
  * Support unset font in Debconf configurator.  Thanks Dave Witbrodt,
    closes: #527641.
  * Kyrgyz keyboard is non-latin.  Proper defaults with ky_KG locale.
    Closes: #527643.
  * Correct a mistake in the manpage.  Thanks to Phil Endecott and
    Matthew King, closes: #527955, #528186.

  [ Debconf translations ]
  * Italian (new translation by Vincenzo Campanella). Closes: #521799.
  * Swedish. Closes: #528576
  * Russian. Closes: #528676  
  * French

 -- Anton Zinoviev <zinoviev@debian.org>  Thu, 14 May 2009 21:42:14 +0300

console-setup (1.34) unstable; urgency=medium

  [ Colin Watson ]
  * Fix bashism.

  [ Anton Zinoviev ]
  * Remove committed by mistake debugging code.  Thanks to Colin Watson,
    closes: #527057.
  * Another attempt to fix properly #526862 (still not good for people